# libmkdir

./: CMakeLists.txt  LICENSE  README.md  ROADMAP.md  compile_commands.json  libmkdir.h
.cache/clangd/index/: libmkdir.h.50A51E169CDD2833.idx  main.c.E6484D29B10671A4.idx
include/: libmkdir.h
include/internal/: base.h  lin.h  uni.h  win.h
libmkdir/: libmkdir.h
libmkdir/internal/: base.h  uni.h  util.h  win.h
test/: addrec.c  current.c  dirlist.c  firetest.c  main.c  move.c  recursive.c  rename.c  rmrec.c
