cmake_minimum_required(VERSION 3.16)
project(libmkdir C)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_executable(main test/main.c)
add_executable(rename test/rename.c)
add_executable(recursive test/recursive.c)
add_executable(current test/current.c)
add_executable(firetest test/firetest.c)
add_executable(rmrec test/rmrec.c)

include_directories(include)
